# badTerminalEmu

./: README.md  dune-project  gamenote.md  typingthing.opam
lib/: dune
test/: dune
